--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "curso_mean2",
+  "name": "curso-mean2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cark666/CursoAngularVictorRobles.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cark666/CursoAngularVictorRobles/issues"
-  },
-  "homepage": "https://github.com/cark666/CursoAngularVictorRobles#readme"
+  "author": "Carlos Galiano",
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
+    "connect-multiparty": "^2.1.0",
+    "express": "^4.16.4",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.24.0",
+    "mongoose": "^5.5.8",
+    "mongoose-pagination": "^1.0.0",
+    "nodemon": "^1.19.0"
+  }
 }
